<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/circle_title"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/flex"
            android:textColor="#000000"
            android:textSize="40dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flexfit"
            android:gravity="center"
            android:textSize="45dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_your_account"
            android:gravity="center"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edittext_uname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/circle_title"
            android:gravity="center"
            android:hint="@string/username"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edittext_pw"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/circle_title"
            android:gravity="center"
            android:hint="@string/password"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/circle_button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="23dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/circle_button"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="23dp" />
    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>