<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            android:textSize="45dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_flexfit_account"
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/circle_title"
            android:gravity="center"
            android:hint="@string/username"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/circle_title"
            android:gravity="center"
            android:hint="@string/password"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/circle_title"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/circle_button"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="23dp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/circle_button"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="23dp" />

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>