<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/circle_title2"
            android:gravity="center"
            android:text="@string/add_diary"
            android:textColor="#FFFFFF"
            android:textSize="40dp" />


        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="13dp"
                    android:gravity="right"
                    android:text="@string/type"
                    android:textSize="20dp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/edittext_type"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_title"
                    android:gravity="center"
                    android:hint="@string/jogging"
                    android:textSize="20dp"
                    android:layout_marginLeft="20dp"
                    android:maxLength="11"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="13dp"
                    android:gravity="right"
                    android:text="@string/date"
                    android:textSize="20dp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/distance_text"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_title"
                    android:gravity="center"
                    android:maxLength="10"
                    android:hint="@string/_06_06_2023"
                    android:textSize="20dp"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="13dp"
                    android:gravity="right"
                    android:text="@string/duration"
                    android:textSize="20dp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/duration_text"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_title"
                    android:gravity="center"
                    android:hint="@string/_01_30"
                    android:textSize="20dp"
                    android:layout_marginLeft="20dp"
                    android:maxLength="10"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:gravity="center">
            <Button
                android:id="@+id/back"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/back"
                android:gravity="center"
                android:background="@drawable/circle_button2"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:layout_gravity="right"
                android:layout_marginRight="40dp"/>
            <Button
                android:id="@+id/add"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/add"
                android:gravity="center"
                android:background="@drawable/circle_button2"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>