<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:background="@drawable/circle_title2"
                android:gravity="center"
                android:text="@string/add_record"
                android:textColor="#FFFFFF"
                android:textSize="40dp" />


            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="13dp"
                        android:gravity="right"
                        android:text="@string/type"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/edittext_type"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_title"
                        android:gravity="center"
                        android:hint="@string/jogging"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"
                        android:maxLength="11"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="13dp"
                        android:gravity="right"
                        android:text="@string/distance"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detailed_distance"
                        android:layout_width="200dp"
                        android:layout_height="46dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/circle_title"
                        android:gravity="center"
                        android:hint="0"
                        android:textSize="20dp"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="13dp"
                        android:gravity="right"
                        android:text="@string/duration"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/duration_detail"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_title"
                        android:gravity="center"
                        android:hint="00:00:00"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"
                        android:maxLength="10"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                android:gravity="center">

                <Button
                    android:id="@+id/back"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/circle_button2"
                    android:gravity="center"
                    android:text="@string/back"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp" />
                <Button
                    android:id="@+id/control"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:text="@string/start"
                    android:gravity="center"
                    android:background="@drawable/circle_button2"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"/>
                <Button
                    android:id="@+id/add"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:text="@string/add"
                    android:gravity="center"
                    android:background="@drawable/circle_button2"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="30dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>