<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:text="@string/flexfit_record"
                android:background="@drawable/list_item_2"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="30dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|right"
                android:layout_marginTop="10dp"
                android:background="@drawable/list_item"
                android:gravity="center"
                android:text="@string/log_out"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_marginBottom="30dp">

            <Button
                android:id="@+id/back"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="right"
                android:layout_marginRight="40dp"
                android:background="@drawable/circle_button2"
                android:gravity="center"
                android:onClick="onClickBack"
                android:text="@string/back"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <Button
                android:id="@+id/add"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/add"
                android:gravity="center"
                android:background="@drawable/circle_button2"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>