<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:text="@string/flexfit_diary"
                android:background="@drawable/list_item_2"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="30dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|right"
                android:layout_marginTop="10dp"
                android:background="@drawable/list_item"
                android:gravity="center"
                android:onClick="onClickLogout"
                android:text="@string/log_out"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right"
            android:background="@drawable/list_item"
            android:layout_marginTop="100dp"
            android:layout_gravity="end">

            <TextView
                android:id="@+id/btn_mainpage"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="left"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:text="FLEXFIT Diary"
                android:textColor="#FFFFFF"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right"
            android:background="@drawable/list_item"
            android:layout_marginTop="80dp"
            android:layout_gravity="end">

            <TextView
                android:id="@+id/btn_map"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="left"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:text="@string/flexfit_record"
                android:textColor="#FFFFFF"
                android:textSize="30dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>